// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diff E2E > generates different images 1`] = `
{
  "height": 10,
  "score": 0.37,
  "width": 10,
}
`;

exports[`diff E2E > generates different sizes images 1`] = `
{
  "height": 15,
  "score": 0.5156000000000001,
  "width": 15,
}
`;

exports[`diff E2E > generates images with big diff 1`] = `
{
  "height": 4469,
  "score": 0.8096,
  "width": 1000,
}
`;

exports[`diff E2E > generates the same image where 1 has a transparent background 1`] = `
{
  "height": 10,
  "score": 0.41,
  "width": 10,
}
`;

exports[`diff E2E > takes into account colors in comparison 1`] = `
{
  "height": 10,
  "score": 1,
  "width": 10,
}
`;

exports[`diff E2E > works with large size image 1`] = `
{
  "height": 13358,
  "score": 0.2332,
  "width": 900,
}
`;
